--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,7 @@
     </head>
     <body>
         <h1 class="text-3xl font-bold">Title: {{ .title }}</h1>
-        <br />
-        Base template: {{template "subtitle"}}
-        Paragraph template
-        <p>{{template "paragraph"}}</p>
+        <h2 class="text-2xl font-bold">Title: {{ .user }}</h2>
+        {{ template "main" }}
     </body>
 </html>
