--- a/templates/me/main.html
+++ b/templates/me/main.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <span>username : {{ .user }}</span>
-<span>{{ .title}}</span>
+<span>Title : {{ .title }}</span>
 
 <form action="/logout" method="POST">
     <button type="submit">Logout</button>
