--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,7 @@
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
-        <h1 class="text-3xl font-bold">Title: {{ .title }}</h1>
         <h2 class="text-2xl font-bold">Title: {{ .user }}</h2>
-        {{ template "main" }}
+        {{ template "main" . }}
     </body>
 </html>
